--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -49,6 +49,41 @@
   font-size: 6.25rem;
   margin: 0.05rem;
 }
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+.countdownButtonActive {
+  width: 100%;
+  height: 5rem;
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  border-radius: 5px;
+  background: var(--white);
+  color: var(--title);
+  font-weight: 600;
+  transition: background-color 0.2s;
+}
+
+.countdownButtonDisabled {
+  width: 100%;
+  height: 5rem;
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  border-radius: 5px;
+  background: var(--text);
+  color: var(--white);
+  font-weight: 600;
+  transition: background-color 0.2s;
+  cursor: not-allowed;
+}
+
+.countdownButtonActive:hover {
+  background: var(--red);
+  color: var(--white);
 }
