--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 :root {
   --white: #ffffff;
   --gray-line: #dcdde0;
-  --text: 666666;
+  --text: #666666;
   --text-highlight: #b3b9ff;
   --title: #2e384d;
   --red: #e83f5b;
